[gd_scene load_steps=18 format=3 uid="uid://dfe6bc7mdpexj"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_jwdk3"]
[ext_resource type="PackedScene" uid="uid://dpjckt12ipcw2" path="res://scenes/characters/enemy.tscn" id="2_abhdw"]
[ext_resource type="PackedScene" uid="uid://yaht8i4bkv2u" path="res://scenes/UI/HUD.tscn" id="3_8qfpp"]
[ext_resource type="PackedScene" uid="uid://dldkm6m8ux87t" path="res://scenes/objects/bullet.tscn" id="3_8vuuc"]
[ext_resource type="PackedScene" uid="uid://cjuw1uddg4foi" path="res://scenes/objects/pickup.tscn" id="4_3g6v5"]
[ext_resource type="Resource" uid="uid://dh8xipsw2bu5w" path="res://resources/enemy/demon_skull.tres" id="4_ikhts"]
[ext_resource type="PackedScene" uid="uid://1dmnavilcwx5" path="res://scenes/UI/upgradeHUD.tscn" id="4_ls5jb"]
[ext_resource type="Resource" uid="uid://doalqpgaptgxa" path="res://resources/enemy/demon_dog.tres" id="5_3s043"]
[ext_resource type="PackedScene" uid="uid://cnepphpba8e8u" path="res://scenes/characters/player.tscn" id="5_a3mdk"]
[ext_resource type="Resource" uid="uid://bqyg0clrpkdim" path="res://resources/enemy/demon_skeleton.tres" id="6_8vwn2"]
[ext_resource type="Resource" uid="uid://djjvchiit0f0n" path="res://resources/enemy/angel_worshipper.tres" id="7_c5yt3"]
[ext_resource type="Resource" uid="uid://bnoj3uq3e6s17" path="res://resources/enemy/angel_warrior.tres" id="8_vk0tv"]
[ext_resource type="Resource" uid="uid://daslelns8qmfv" path="res://resources/enemy/angel_crusader.tres" id="9_d18g6"]
[ext_resource type="Texture2D" uid="uid://dvrx1ijrwk8a2" path="res://art/backgrounds/hell_level_1.png" id="11_ytepx"]
[ext_resource type="PackedScene" uid="uid://cu0upewcndo61" path="res://scenes/objects/mountain_small.tscn" id="15_c0t5p"]
[ext_resource type="PackedScene" uid="uid://7pekoii3l4xw" path="res://scenes/objects/pillar.tscn" id="16_msr33"]
[ext_resource type="PackedScene" uid="uid://j8g4suxt2pa2" path="res://scenes/objects/mountain_large.tscn" id="17_7v7se"]

[node name="Main" type="Node"]
script = ExtResource("1_jwdk3")
enemy_scene = ExtResource("2_abhdw")
bullet_scene = ExtResource("3_8vuuc")
pickup_scene = ExtResource("4_3g6v5")
safe_range = 800
enemy_resource_list = Array[Resource("res://scripts/enemy_resource.gd")]([ExtResource("4_ikhts"), ExtResource("5_3s043"), ExtResource("6_8vwn2"), ExtResource("7_c5yt3"), ExtResource("8_vk0tv"), ExtResource("9_d18g6")])

[node name="TextureRect" type="TextureRect" parent="."]
light_mask = 3
offset_left = -23173.0
offset_top = -23366.0
offset_right = 27956.0
offset_bottom = 27763.0
texture = ExtResource("11_ytepx")
expand_mode = 4
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("5_a3mdk")]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="HUD" parent="." instance=ExtResource("3_8qfpp")]

[node name="upgradeHUD" parent="." instance=ExtResource("4_ls5jb")]

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(576, 324)

[node name="mountain_small" parent="." instance=ExtResource("15_c0t5p")]
z_index = 2
position = Vector2(373, -282)

[node name="pillar" parent="." instance=ExtResource("16_msr33")]
z_index = 2
position = Vector2(1529, 208)

[node name="mountain_large" parent="." instance=ExtResource("17_7v7se")]
position = Vector2(-323, 580)

[connection signal="fire_bullet" from="Player" to="." method="_on_fire_bullet"]
[connection signal="level_up" from="Player" to="." method="_on_player_level_up"]
[connection signal="player_death" from="Player" to="." method="_on_player_player_death"]
[connection signal="taken_damage" from="Player" to="." method="_on_player_taken_damage"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
[connection signal="upgrade_1_pressed" from="upgradeHUD" to="." method="_on_upgrade_hud_upgrade_1_pressed"]
[connection signal="upgrade_2_pressed" from="upgradeHUD" to="." method="_on_upgrade_hud_upgrade_2_pressed"]
[connection signal="upgrade_3_pressed" from="upgradeHUD" to="." method="_on_upgrade_hud_upgrade_3_pressed"]
